--- a/doc/changes/v2.1.0.rst
+++ b/doc/changes/v2.1.0.rst
@@ -39,13 +39,13 @@ Parts of the Python package now require glibc 2.28+
 ***************************************************
 Starting from 2.1.0, XGBoost Python package will be distributed in two variants:
 
-* ``manylinux2_28``: for recent Linux distros with glibc 2.28 or newer. This variant comes with all features enabled.
+* ``manylinux_2_28``: for recent Linux distros with glibc 2.28 or newer. This variant comes with all features enabled.
 * ``manylinux2014``: for old Linux distros with glibc older than 2.28. This variant does not support GPU algorithms or federated learning.
 
 The ``pip`` package manager will automatically choose the correct variant depending on your system.
 
 Starting from **May 31, 2024**, we will stop distributing the ``manylinux2014`` variant and exclusively
-distribute the ``manylinux2_28`` variant. We made this decision so that our CI/CD pipeline won't have
+distribute the ``manylinux_2_28`` variant. We made this decision so that our CI/CD pipeline won't have
 depend on software components that reached end-of-life (such as CentOS 7). We strongly encourage
 everyone to migrate to recent Linux distros in order to use future versions of XGBoost.
 
