--- a/R-package/vignettes/xgboostPresentation.Rmd
+++ b/R-package/vignettes/xgboostPresentation.Rmd
@@ -157,12 +157,12 @@ as a named list:
 ```{r}
 bstTrInterface <- xgb.train(
     data = xgb.DMatrix(train$data, label = train$label, nthread = 1)
-    , params = list(
+    , params = xgb.params(
         objective = "binary:logistic"
         , max_depth = 2
         , eta = 1
+        , nthread = 2
     )
-    , nthread = 2
     , nrounds = 2
 )
 ```
@@ -343,9 +343,9 @@ For a better understanding of the learning progression, you may want to have som
 ```{r evals2, message=F, warning=F}
 bst <- xgb.train(
     data = dtrain
-    , max_depth = 2
     , params = list(
         eta = 1
+        , max_depth = 2
         , nthread = 2
         , objective = "binary:logistic"
         , eval_metric = "error"
