--- a/R-package/vignettes/discoverYourData.Rmd
+++ b/R-package/vignettes/discoverYourData.Rmd
@@ -174,7 +174,7 @@ The code below is very usual. For more information, you can look at the document
 
 ```{r}
 bst <- xgboost(x = sparse_matrix, y = output_vector,
-               max_depth = 4, eta = 1,
+               max_depth = 4, learning_rate = 1,
                nthread = 2, nrounds = 10)
 
 ```
