--- a/R-package/vignettes/xgboost_introduction.qmd
+++ b/R-package/vignettes/xgboost_introduction.qmd
@@ -166,9 +166,9 @@ dmatrix <- xgb.DMatrix(
 booster <- xgb.train(
     data = dmatrix,
     nrounds = 10,
-    params = list(
+    params = xgb.params(
         objective = "binary:logistic",
-        nthreads = 1,
+        nthread = 1,
         max_depth = 3
     )
 )
