format. [skip ci]

--- a/doc/changes/v3.0.0.rst
+++ b/doc/changes/v3.0.0.rst
@@ -1,6 +1,6 @@
-###################
-3.0.3 (2025 Jul 30)
-###################
+#################################
+3.0.3 Patch Release (Jul 30 2025)
+################################
 
 - Fix NDCG metric with non-exp gain. (:pr:`11534`)
 - Avoid using mean intercept for ``rmsle``. (:pr:`11588`)
@@ -13,16 +13,16 @@
 - Make xgboost.testing compatible with scikit-learn 1.7 (:pr:`11502`)
 - Add support for building xgboost wheels on Win-ARM64 (:pr:`11572`, :pr:`11597`, :pr:`11559`)
 
-###################
-3.0.2 (2025 May 25)
-###################
+#################################
+3.0.2 Patch Release (May 25 2025)
+#################################
 
 - Dask 2025.4.0 scheduler info compatibility fix (:pr:`11462`)
 - Fix CUDA virtual memory fallback logic on WSL2 (:pr:`11471`)
 
-###################
-3.0.1 (2025 May 13)
-###################
+#################################
+3.0.1 Patch Release (May 13 2025)
+#################################
 
 - Use ``nvidia-smi`` to detect the driver version and handle old drivers that don't support virtual memory. (:pr:`11391`)
 - Optimize deep trees for GPU external memory. (:pr:`11387`)
